<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/linearLayout"
    android:background="@drawable/card_history"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/TextViewbusID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/bus"
        android:textSize="24sp"
        android:paddingLeft="5dp"
        android:textColor="@color/black"
        android:layout_marginLeft="5dp"/>

    <TextView
        android:id="@+id/tick_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:fontFamily="@font/inter"
        android:text="@string/tick_in"
        android:textSize="14dp"
        android:paddingLeft="5dp"
        android:layout_marginLeft="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">
        <TextView
            android:id="@+id/NameFieldTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/inter"
            android:text="@string/name_field"
            android:textSize="14dp"
            android:paddingLeft="5dp"
            android:layout_marginLeft="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:fontFamily="@font/inter"
                android:textSize="14dp"
                android:id="@+id/nameService"
                android:text="@string/TextViewserviceID"
                android:layout_gravity="left" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:fontFamily="@font/inter"
                android:textSize="14dp"
                android:gravity="right"
                android:id="@+id/codeTransport"
                android:text="@string/TextViewbusID"
                android:layout_gravity="left" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:fontFamily="@font/inter"
                android:textSize="14dp"
                android:gravity="right"
                android:id="@+id/date"
                android:text="@string/TextViewdateID"
                android:layout_gravity="left" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:fontFamily="@font/inter"
                android:textSize="14dp"
                android:gravity="right"
                android:id="@+id/price"
                android:text="@string/TextViewsummaID"
                android:layout_gravity="left" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>