<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".ui.dashboard.DashboardFragment">

    <TextView
        android:id="@+id/phoneIDTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:fontFamily="@font/inter_semibold"
        android:gravity="right"
        android:text="@string/number"
        android:textColor="@color/black"
        android:textSize="27sp" />

    <LinearLayout
        android:id="@+id/card"
        android:layout_width="356dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/button_custom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/priceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/priceHome"
            android:textColor="@color/white"
            android:textSize="55sp" />

        <TextView
            android:id="@+id/amountoftripTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="1dp"
            android:text="@string/countHome"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <View
            android:layout_width="197dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="-35dp"
            android:background="@drawable/customaddtextview" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/info"
        android:orientation="vertical"
        android:layout_width="356dp"
        android:layout_height="425dp"
        android:layout_below="@+id/card"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_infocard"
        android:elevation="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/titleinfo"
            android:textColor="@color/black"
            android:textSize="21sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:fontFamily="@font/inter"
            android:textStyle="italic"
            android:text="@string/textonaytitle"
            android:textColor="@color/black"
            android:textSize="21sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="-25dp"
            android:fontFamily="@font/inter"
            android:text="@string/textonay"
            android:textColor="@color/black"
            android:textSize="21sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="-35dp"
            android:fontFamily="@font/inter"
            android:textStyle="italic"
            android:text="@string/texttolemtitle"
            android:textColor="@color/black"
            android:textSize="21sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="-25dp"
            android:fontFamily="@font/inter"
            android:text="@string/texttolem"
            android:textColor="@color/black"
            android:textSize="21sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="-35dp"
            android:fontFamily="@font/inter"
            android:textStyle="italic"
            android:text="@string/texttulpartitle"
            android:textColor="@color/black"
            android:textSize="21sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="-25dp"
            android:fontFamily="@font/inter"
            android:text="@string/texttulpar"
            android:textColor="@color/black"
            android:textSize="21sp"/>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:itemIconSize="27dp"
        app:itemIconTint="@drawable/item_selector"
        app:itemRippleColor="@android:color/white"
        app:itemTextColor="@drawable/item_selector"
        app:menu="@menu/bottom_nav_menu" />

</RelativeLayout>