<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth_activity"
    android:background="@drawable/back">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="222dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="205dp"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="19dp"
            android:text="@string/welcome_screen"
            android:textColor="@color/black"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/phone_number"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/auth_number"
            android:layout_width="358dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="30dp"
            android:gravity="left"
            android:text=""
            android:textColor="@color/black"
            android:backgroundTint="@color/red"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="430px"
            android:layout_height="115px"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_custom"
            android:fontFamily="@font/inter_medium"
            android:text="@string/join"
            android:textColor="@color/white"
            android:textSize="19sp" />


    </LinearLayout>

</RelativeLayout>